--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="css/style.css" />
 
-  <!-- Password + splash styles -->
+  <!-- Password + splash styles + Help modal styles -->
   <style>
     /* Password entry area */
     #access-panel{
@@ -69,13 +69,127 @@
       min-height: 1.2em;
     }
 
-    /* Change Project button — fixed so keyboard doesn't break layout */
-    #change-project-btn{
+    /* ===== Top-right button bar (Help + Change project) ===== */
+    #top-right-controls{
       position: fixed;
       top: 12px;
       right: 12px;
       z-index: 4500;
-      display: none;
+      display: none;            /* shown after password */
+      align-items: center;
+      gap: 8px;
+    }
+
+    /* Change Project button — keep your existing id */
+    #change-project-btn{
+      position: static;         /* IMPORTANT: allow flex layout */
+      display: inline-block;
+    }
+
+    /* Help circular button */
+    #help-btn{
+      width: 36px;
+      height: 36px;
+      border-radius: 999px;
+
+      border: 1px solid rgba(255,255,255,0.35);
+      background: rgba(35,35,35,0.85);
+      color: #fff;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 34px;
+      text-align: center;
+
+      cursor: pointer;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    #help-btn:hover{
+      background: rgba(35,35,35,0.95);
+    }
+
+    /* Slightly smaller on very small screens to preserve one-line layout */
+    @media (max-width: 420px){
+      #help-btn{
+        width: 34px;
+        height: 34px;
+        font-size: 17px;
+        line-height: 32px;
+      }
+    }
+
+    /* ===== Help Video Modal ===== */
+    #help-modal{
+      position: fixed;
+      inset: 0;
+      z-index: 10000;
+      display: none; /* toggled via .is-open */
+    }
+    #help-modal.is-open{
+      display: block;
+    }
+
+    #help-modal .help-backdrop{
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.65);
+    }
+
+    #help-modal .help-panel{
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+
+      width: min(900px, calc(100vw - 28px));
+      max-height: calc(100vh - 28px);
+
+      background: rgba(15, 15, 15, 0.98);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 14px;
+      box-shadow: 0 18px 60px rgba(0,0,0,0.55);
+      overflow: hidden;
+    }
+
+    /* Close button (top-left) */
+    #help-modal .help-close{
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 2;
+
+      width: 34px;
+      height: 34px;
+      border-radius: 10px;
+
+      border: 1px solid rgba(255,255,255,0.18);
+      background: rgba(0,0,0,0.55);
+      color: #fff;
+      font-size: 18px;
+      line-height: 32px;
+      cursor: pointer;
+    }
+
+    #help-modal .help-content{
+      padding: 52px 14px 14px; /* leaves room for close button */
+    }
+
+    /* Responsive 16:9 video wrapper */
+    #help-modal .help-video{
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* 16:9 */
+      background: #000;
+      border-radius: 12px;
+      overflow: hidden;
+    }
+
+    #help-modal .help-video iframe{
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
     }
   </style>
 </head>
@@ -126,14 +240,50 @@
 
   <div id="map"></div>
 
-  <button id="change-project-btn">Change project</button>
+  <!-- Top-right controls: Help + Change project -->
+  <div id="top-right-controls">
+    <button id="help-btn" type="button" aria-label="Open help video" title="Help">?</button>
+    <button id="change-project-btn" type="button">Change project</button>
+  </div>
+
+  <!-- Help video modal -->
+  <div id="help-modal" aria-hidden="true" role="dialog" aria-label="Instructional video">
+    <div class="help-backdrop" data-close="true"></div>
+
+    <div class="help-panel" role="document">
+      <button class="help-close" type="button" aria-label="Close help video" title="Close">✕</button>
+
+      <div class="help-content">
+        <div class="help-video">
+          <!-- Your iframe (responsive, no autoplay) -->
+          <iframe
+            src="https://www.youtube.com/embed/gx9IjP_d7vU"
+            title="ReefShape instructional video"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/map.js"></script>
 
   <script>
   (function () {
     const introModal = document.getElementById("intro-modal");
+    const controls = document.getElementById("top-right-controls");
     const changeBtn = document.getElementById("change-project-btn");
+
+    // Help modal elements
+    const helpBtn = document.getElementById("help-btn");
+    const helpModal = document.getElementById("help-modal");
+    const helpBackdrop = helpModal ? helpModal.querySelector(".help-backdrop") : null;
+    const helpClose = helpModal ? helpModal.querySelector(".help-close") : null;
+    const helpIframe = helpModal ? helpModal.querySelector("iframe") : null;
+    const helpSrc = helpIframe ? helpIframe.getAttribute("src") : null; // used to stop video on close
 
     function normalizePw(pw) {
       return (pw || "").trim();
@@ -146,8 +296,27 @@
       return p === "msc";
     }
 
-    function showChangeProjectButton() {
-      if (changeBtn) changeBtn.style.display = "inline-block";
+    function showTopRightControls() {
+      if (controls) controls.style.display = "flex";
+    }
+
+    function openHelp() {
+      if (!helpModal) return;
+      helpModal.classList.add("is-open");
+      helpModal.setAttribute("aria-hidden", "false");
+      document.body.style.overflow = "hidden";
+    }
+
+    function closeHelp() {
+      if (!helpModal) return;
+      helpModal.classList.remove("is-open");
+      helpModal.setAttribute("aria-hidden", "true");
+      document.body.style.overflow = "";
+
+      // Stop playback by resetting src (prevents audio continuing in background)
+      if (helpIframe && helpSrc) {
+        helpIframe.setAttribute("src", helpSrc);
+      }
     }
 
     function submitPassword() {
@@ -163,7 +332,7 @@
       sessionStorage.setItem("reefshape_password", pw);
       if (introModal) introModal.style.display = "none";
       err.textContent = "";
-      showChangeProjectButton();
+      showTopRightControls();
     }
 
     document.getElementById("enter-button")
@@ -181,10 +350,20 @@
       });
     }
 
+    // Help button wiring
+    if (helpBtn) helpBtn.addEventListener("click", openHelp);
+    if (helpClose) helpClose.addEventListener("click", closeHelp);
+    if (helpBackdrop) helpBackdrop.addEventListener("click", closeHelp);
+    document.addEventListener("keydown", (e) => {
+      if (e.key === "Escape" && helpModal && helpModal.classList.contains("is-open")) {
+        closeHelp();
+      }
+    });
+
     const existing = normalizePw(sessionStorage.getItem("reefshape_password"));
     if (isValidPassword(existing)) {
       if (introModal) introModal.style.display = "none";
-      showChangeProjectButton();
+      showTopRightControls();
     }
   })();
   </script>
